<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:hint="@string/str_last_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/user1"
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:hint="@string/str_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/user2"
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:hint="@string/str_balance"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/textView4"
        android:gravity="center"/>


    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/str_pref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_weight="1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/str_price"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:id="@+id/button4" />

        <Button
            android:text="@string/str_recharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_weight="10.63" />
    </LinearLayout>

</LinearLayout>