<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:text="@string/prices_and_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:text="@string/select_products"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            android:gravity="center"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <Button
            android:text="@string/select_prices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>